update accents on the word resume

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
       </section>
 
       <section id="resume">
-        <h1>Resume</h1>
+        <h1>R&eacute;sum&eacute;</h1>
           <h3>Skills</h3>
             <table class="skills">
               <tr>
@@ -252,7 +252,7 @@
             <a href="#projects">Projects</a>
           </li>
           <li>
-            <a href="#resume">Resume</a>
+            <a href="#resume">R&eacute;sum&eacute;</a>
           </li>
           <li>
             <a href="#contact">Contact</a>
