--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 
 
       <section id="about">
+    
         <p>
           Strategic thinking professional driven by the opportunity to collaborate and solve problems. Team player with a self-start attitude. <strong>Results driven</strong> and consitently applying new knowledge to expound upon my abilities as a learner and a leader. Demonstrated ability to understand the big picture, qiuckly and accurately assess a situation and extract key issues, formulate objectives and deliver positive results.
         </p>
@@ -40,7 +41,7 @@
           <article class="three-col">
             <h3>Project 1</h3>
             <a href="https://www.github.com" target="_blank">
-              <img src="http://www.fillmurray.com/300/300" alt="Bill Fucking Murray">
+              <img src="images/BFM_300x300.jpg" alt="Bill Fucking Murray">
             </a>
                 <table>
                   <tr>
@@ -88,7 +89,7 @@
           <article class="three-col">
             <h3>Project 2</h3>
             <a href="https://www.github.com" target="_blank">
-              <img src="http://www.fillmurray.com/300/300" alt="Bill Fucking Murray">
+              <img src="images/BFM_300x300.jpg" alt="Bill Fucking Murray">
             </a>
               <table>
                 <tr>
@@ -120,7 +121,7 @@
           <article class="three-col">
             <h3>Project 3</h3>
               <a href="https://www.github.com" target="_blank">
-                <img src="http://www.fillmurray.com/300/300" alt="Bill Fucking Murray">
+                <img src="images/BFM_300x300.jpg" alt="Bill Fucking Murray">
               </a>
               <table>
                 <tr>
@@ -178,38 +179,129 @@
         </table>
 
         <h3>Past Employement</h3>
-          <img src="http://www.brandsoftheworld.com/sites/default/files/styles/logo-thumbnail/public/052012/red_robin_logo.png?itok=tc54rd9y"
-          alt="Red Robin logo">
           <h3>Red Robin</h3>
-          <ul>
-            <li>stuff I did. stuff I did. stuff I did. stuff I did. stuff I did. stuff I did. stuff I did. </li>
-            <li>stuff I did. stuff I did. stuff I did. stuff I did. stuff I did. stuff I did. stuff I did. </li>
-            <li>stuff I did. stuff I did. stuff I did. stuff I did. stuff I did. stuff I did. stuff I did. </li>
-          </ul>
-          <img src="http://www.brandsoftheworld.com/sites/default/files/styles/logo-thumbnail/public/0017/6258/brand.gif?itok=JWE85rn-"
-          alt="Sports Authority logo">
+          <table class="resume">
+            <tr>
+              <td class="resume-header">
+                Title:
+              </td>
+              <td class="resume-detail">
+                Associate Manager: Loyalty Marketing
+              </td>
+            </tr>
+            <tr>
+              <td class="resume-header">
+                Responsibilities:
+              </td>
+              <td class="resume-detail">
+                <ul>
+                  <li>
+                    Some stuff I did. Details blah blah blah stuff I did yada yada yada.
+                  </li>
+                  <li>
+                    Different stuff I did. More details than before blah blah blah stuff I did yada yada yada.
+                  </li>
+                  <li>
+                    Some stuff I did. Details blah blah blah stuff I did yada yada yada.
+                  </li>
+                </ul>
+              </td>
+            </tr>
+          </table>
           <h3>Sports Authority</h3>
-          <ul>
-            <li>stuff I did. stuff I did. stuff I did. stuff I did. stuff I did. stuff I did. stuff I did. </li>
-            <li>stuff I did. stuff I did. stuff I did. stuff I did. stuff I did. stuff I did. stuff I did. </li>
-            <li>stuff I did. stuff I did. stuff I did. stuff I did. stuff I did. stuff I did. stuff I did. </li>
-          </ul>
-          <img src="http://www.brandsoftheworld.com/sites/default/files/styles/logo-thumbnail/public/0023/5388/brand.gif?itok=WcUmHPhr"
-          alt="Best Buy logo">
+          <table class="resume">
+            <tr>
+              <td class="resume-header">
+                Title:
+              </td>
+              <td class="resume-detail">
+                Associate Manager: Loyalty Marketing
+              </td>
+            </tr>
+            <tr>
+              <td class="resume-header">
+                Responsibilities:
+              </td>
+              <td class="resume-detail">
+                <ul>
+                  <li>
+                    Some stuff I did. Details blah blah blah stuff I did yada yada yada.
+                  </li>
+                  <li>
+                    Different stuff I did. More details than before blah blah blah stuff I did yada yada yada.
+                  </li>
+                  <li>
+                    Some stuff I did. Details blah blah blah stuff I did yada yada yada.
+                  </li>
+                </ul>
+              </td>
+            </tr>
+          </table>
           <h3>Best Buy</h3>
-          <ul>
-            <li>stuff I did. stuff I did. stuff I did. stuff I did. stuff I did. stuff I did. stuff I did. </li>
-            <li>stuff I did. stuff I did. stuff I did. stuff I did. stuff I did. stuff I did. stuff I did. </li>
-            <li>stuff I did. stuff I did. stuff I did. stuff I did. stuff I did. stuff I did. stuff I did. </li>
-          </ul>
-
+          <table class="resume">
+            <tr>
+              <td class="resume-header">
+                Title:
+              </td>
+              <td class="resume-detail">
+                Associate Manager: Loyalty Marketing
+              </td>
+            </tr>
+            <tr>
+              <td class="resume-header">
+                Responsibilities:
+              </td>
+              <td class="resume-detail">
+                <ul>
+                  <li>
+                    Some stuff I did. Details blah blah blah stuff I did yada yada yada.
+                  </li>
+                  <li>
+                    Different stuff I did. More details than before blah blah blah stuff I did yada yada yada.
+                  </li>
+                  <li>
+                    Some stuff I did. Details blah blah blah stuff I did yada yada yada.
+                  </li>
+                </ul>
+              </td>
+            </tr>
+          </table>
+    </section>
+    <section id="education">
         <h1>Education</h1>
           <h3>Turing</h3>
-          <img src="https://course_report_production.s3.amazonaws.com/rich/rich_files/rich_files/828/s300/turing-logo-cr.png" alt="Turing Logo">
-          <p>Front-End Engineering Program</p>
+          <table class="edu">
+            <tr>
+              <td>
+                <img
+              <td class="edu-header">
+                Program:
+              </td>
+              <td class="edu-detail">
+                Front End Development
+              </td>
+            </tr>
+            <tr>
+              <td class="edu-header">
+                Key Learnings:
+              </td>
+              <td class="edu-detail">
+                <ul>
+                  <li>
+                    Some stuff I did. Details blah blah blah stuff I did yada yada yada.
+                  </li>
+                  <li>
+                    Different stuff I did. More details than before blah blah blah stuff I did yada yada yada.
+                  </li>
+                  <li>
+                    Some stuff I did. Details blah blah blah stuff I did yada yada yada.
+                  </li>
+                </ul>
+              </td>
+            </tr>
+          </table>
 
           <h3>University of Minnesota</h3>
-          <img src="https://www.parchment.com/c/images/college/1480-crest-250-200-d10b78208afc27780227928a04eaf531.png" alt="University of Minnesota Logo">
           <p>Bachelors Degree: Advertising</p>
           <div>
             <a href="#top">
